# down-detector

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manage.py  plan.md  pyproject.toml  requirements.txt
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
monitoring/: __init__.py  admin.py  apps.py  feeds.py  models.py  urls.py  views.py
monitoring/management/commands/: cleanup_old_checks.py  run_checks.py
monitoring/migrations/: 0001_initial.py  0002_outage.py  0003_maintenance.py  0004_alter_maintenance_description_and_more.py  0005_operators_group.py
monitoring/services/: alerter.py  checker.py  scheduler.py  state.py
monitoring/static/monitoring/: style.css
monitoring/templates/: 404.html  500.html
monitoring/templates/admin/: _status_dashboard.html  monitoring_index.html
monitoring/templates/monitoring/: status.html  unavailable.html
monitoring/templatetags/: monitoring_admin.py
scripts/: generate_og_image.py  web-entrypoint.sh
tests/: conftest.py  factories.py  test_admin.py  test_admin_extras.py  test_alerter.py  test_caching.py  test_checker.py  test_cleanup.py  test_feeds.py  test_maintenance.py  test_models.py  test_resilience.py  test_scheduler.py  test_seo.py  test_sparkline.py  test_state.py  test_uptime.py  test_views.py
